checkpoint after trying to fix exif

--- a/src/content/photo/first_photo_post.mdx
+++ b/src/content/photo/first_photo_post.mdx
@@ -2,6 +2,7 @@
 layout: '../../layouts/PhotoPost.astro'
 title: 'Autumn in Minnesota'
 description: 'Capturing the vibrant fall colors'
+category: 'photo'
 pubDate: '2024-10-18'
 camera: 'Sony A7 IV'
 lens: 'Sony 24-70mm f/2.8 GM'
@@ -20,10 +21,10 @@ gallery:
     caption: 'Morning fog in the valley'
     alt: 'Misty morning view of a valley with fall colors'
     exif:
-      # aperture: '8'
-      # shutterSpeed: '1/125'
+      aperture: '8'
+      shutterSpeed: '1/125'
       iso: 200
-      # focalLength: '24'
+      focalLength: '24'
 ---
 
 Content of your blog post goes here...
