--- a/src/content/language/first-language-post.mdx
+++ b/src/content/language/first-language-post.mdx
@@ -4,6 +4,7 @@ description: 'Lorem ipsum dolor sit amet'
 pubDate: 'Jul 08 2022'
 heroImage: '/blog-placeholder-3.jpg'
 targetLanguage: 'English'
+category: 'language'
 
 ---
 
