--- a/src/content/tech/how_i_built_my_blog.mdx
+++ b/src/content/tech/how_i_built_my_blog.mdx
@@ -5,6 +5,7 @@ pubDate: "2024-10-17"
 tags: ["astro", "web development"]
 language: "typescript"
 codeRepo: "https://github.com/username/project"
+category: "tech"
 ---
 
 Content goes here...
