--- a/src/content/photo/first_photo_post.mdx
+++ b/src/content/photo/first_photo_post.mdx
@@ -1,30 +1,19 @@
 ---
-layout: '../../layouts/PhotoPost.astro'
-title: 'Autumn in Minnesota'
-description: 'Capturing the vibrant fall colors'
-category: 'photo'
-pubDate: '2024-10-18'
-camera: 'Sony A7 IV'
-lens: 'Sony 24-70mm f/2.8 GM'
-heroImage: '/images/autumn/hero.jpg'
-date: '2024-10-18'
-gallery:
-  - url: '/images/autumn/1.jpg'
-    caption: 'Maple trees along the river'
-    alt: 'Red and orange maple trees reflecting in calm river water'
-    exif:
-      aperture: '2.8'
-      shutterSpeed: '1/1000'
-      iso: 100
-      focalLength: '70'
-  - url: '/images/autumn/2.jpg'
-    caption: 'Morning fog in the valley'
-    alt: 'Misty morning view of a valley with fall colors'
-    exif:
-      aperture: '8'
-      shutterSpeed: '1/125'
-      iso: 200
-      focalLength: '24'
+layout: ../../layouts/PhotoPost.astro
+title: Autumn in Minnesota
+description: Capturing the vibrant fall colors
+category: photo
+pubDate: 2024-10-18
+heroImage: /images/autumn/hero.jpg
+date: 2024-10-18
+heroExif:
+  dateTaken: 2016:10:02 08:02:26
+  camera: iPhone 6
+  lens: iPhone 6 back camera 4.15mm f/2.2
+  focalLength: 4.2 mm
+  aperture: "2.2"
+  shutterSpeed: 1/640
+  iso: 32
 ---
 
 Content of your blog post goes here...
