--- a/src/content/photo/my_photo_post.mdx
+++ b/src/content/photo/my_photo_post.mdx
@@ -5,13 +5,24 @@ description: My Photo Post
 pubDate: 2024-10-24T11:22:00.000Z
 date: 2024-10-24T11:22:00.000Z
 category: photo
-heroImage: /images/1.jpg
-
 gallery:
   - url: /images/1.jpg
     caption: First photo
     alt: Description of first photo
-  - url: /images/2.jpg
-    caption: Second photo
-    alt: Description of second photo
+    exif:
+      dateTaken: 2016:10:02 08:02:26
+      camera: iPhone 6
+      lens: iPhone 6 back camera 4.15mm f/2.2
+      focalLength: 4.2 mm
+      aperture: "2.2"
+      shutterSpeed: 1/640
+      iso: 32
+heroExif:
+  dateTaken: 2016:10:02 08:02:26
+  camera: iPhone 6
+  lens: iPhone 6 back camera 4.15mm f/2.2
+  focalLength: 4.2 mm
+  aperture: "2.2"
+  shutterSpeed: 1/640
+  iso: 32
 ---
